--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:lZA6WRypO1J6cChoxWK7ZYvV8kVHg+YpKlXkZ5cQ/4U1BQD6PdsCAiaVsdHshxghx1YAlaadhrPKawQsBZEt3GYWAHFOjS0VU7U+mduNiY6W9WN0UfgYhKoeYsM3tA==,iv:g6RDox9WD85lSif2Bc+rZ7LXaxStpox7Xs9ziuZceJM=,tag:sKoXmGTKNeCMAfy3wlSiLA==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:hvpKWhri1YF6HxA=,iv:LS+XCLVMk5R2vZoMzQJZGIYJ3AYV9/UqKZJdTQa9tS0=,tag:ojDnq9nxw/sO7v+P+Idy/Q==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:11s9xqKw4mMdUMA0ZVZnLjY=,iv:K3eRz0pSwY9GKwdsVSIdW0P/5RJK4nAgqtn9+L5vJd8=,tag:39KH8JfKfzqT9qkqykowzw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:/2B693b4zA9FLT+CYAKE3CJyO/qCN9jlg4FNQbZFPI+vf9wv,iv:ubLLPhqCe5CcX1yhkBhqOlxbuKm7YuUC5HieHBdyccY=,tag:Rc2lMMhXbd5WkwHfC8B22A==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:PNVEvaN0lEOPF9JxKoznxDeSM5J8jklzcJKHYhly05C1jkECFIRa7CLaHc4joGZJN5jsKWIE+nqAIkv9lyceBRzNT8tzMndtzGgWwXwT2Xts3d7BcZxBUIMdwxVtTg==,iv:8SzEVEljGZiuQEzVgjTcW5xz+6ma4yIR/SkJKo09Geg=,tag:LyA+gnQVGpX9nkqGkwoJCg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:BPDFeKsSLw2Dz/E=,iv:9ojwCCR1irLZkGgZZl9SOMbDtkLX+Hw66SJP5PVoxts=,tag:x2KoAqG4yNNo7uyE0COvCA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:318ebuxf2OqEVMiVaXVMWBQ=,iv:Mb/UodbJsEReSiyvMXERvM+HPMxPvNorU188UFdNw0k=,tag:NU/xt/ZbnrONcb1W714Q2w==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:zzNCv/LjOw7sQTQHbr2LP1TwtLyIXpHwtco+HDDEj6b7elT/,iv:aN2HVpjkgYp0/Xy6dL1Qv7H+udFCkF5Tn84GC8slCSo=,tag:8SfObCci4a+1N5aRwjWVMA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByeWZRL2NTWDAranJRQjhC
-            RHZ0cnF1ZkVnS0wrOVNnTE5tUVhoeUF0VmpzClJWaE82ZUFKVkh3dHorTHNscldN
-            UWdKYnlMck5LZjVaQ1lqdkYwVmZTZTQKLS0tIElTbkpXb3pkODBtZnlTR3l4MnJ1
-            NWFBVHhua3U0UVVMNmhOOFdkVnJMQjAKqQO80+s9HA8ya08y2ErB8ZXlYqLW2Le1
-            88L54/ATCm789Y+nMkIrFTMJ8GtSo8CrZdpGOoEX5pxKQ7TXwih62A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjN2oyL1lHbWp0UXFmcDB6
+            UGtMbkxWODA2WitRS2NibnVuYkxTc3B5Z0RVCmJxeTUra0JDMm4yL1E0LzVjSHZa
+            MWtZMW5hMjV2VzNJNTRvUXNYQ01OOWMKLS0tIDF5ejRRaWw5UWRPVGxjaC83NjVK
+            QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
+            x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-06T21:31:19Z"
-    mac: ENC[AES256_GCM,data:JtxPk3MdaXbRwtwuMF/qEwZRShh8fAsBMkBldV6H4zpcBu3SfbWIx1wn7yjDiW4ip9AYU7qUPmt/K1r1TV7DKWSDeVMhgffZ6KW3c8RX6Ts68tnH6r5przf/vgAnXt27UYhIUmc5I8rAzfl8XxrF7oYvcCcUpx6jk4lqNEL2onI=,iv:T+TQbDRb/s8KctOPSbw+WPJ1XO8F1oUy4vPU7BHgEoU=,tag:Lm4c2UcFYcQQsa6OjjuDvQ==,type:str]
+    lastmodified: "2024-02-06T22:25:33Z"
+    mac: ENC[AES256_GCM,data:df/K2VznWgc8/IlhMM3S/QFl2+vXScyfABODFTb1V5xYZsI7Q8qy6FQCzykj1tfEYfteJWaxB/An9DvNC/LtIpW8mdBkFVMWe3CPOoTlmwaP51cSFxVaSESmb3yoq/6d1sVg6+c0KjV2nG15ypDuTqxk3GNPjlpO/TIhvOMpPrw=,iv:fHmH1l6PmBJBVa01fKNyi+cy1Tgvec2did8hCQ+DVng=,tag:RjYkdws/eoVWhfMdIqM9zw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
