--- a/kubernetes/apps/kube-system/cilium/app/cilium-l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/cilium-l2.yaml
@@ -7,8 +7,11 @@ metadata:
 spec:
   loadBalancerIPs: true
   # NOTE: This might need to be set if you have more than one active NIC on your hosts
-  # interfaces:
-  #   - ^eno[0-9]+
+  interfaces:
+    - ^eno[0-9]+
+    - ^eth[0-9]+
+    - ^wlo[0-9]+
+    - ^enp[0-9]+s0
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
