--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -8,7 +8,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:BPDFeKsSLw2Dz/E=,iv:9ojwCCR1irLZkGgZZl9SOMbDtkLX+Hw66SJP5PVoxts=,tag:x2KoAqG4yNNo7uyE0COvCA==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:318ebuxf2OqEVMiVaXVMWBQ=,iv:Mb/UodbJsEReSiyvMXERvM+HPMxPvNorU188UFdNw0k=,tag:NU/xt/ZbnrONcb1W714Q2w==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:zzNCv/LjOw7sQTQHbr2LP1TwtLyIXpHwtco+HDDEj6b7elT/,iv:aN2HVpjkgYp0/Xy6dL1Qv7H+udFCkF5Tn84GC8slCSo=,tag:8SfObCci4a+1N5aRwjWVMA==,type:str]
-    WW_ADMIN_PASSWORD: ENC[AES256_GCM,data:GQT7iy1PnyNjKA==,iv:zSisyFNtEP1KDPMe3asEl/t5nBlF7HsYPGbcOrzVjws=,tag:/0n6t9T/28ENDFNwkurTPQ==,type:str]
+    WW_ADMIN_PASSWORD: ENC[AES256_GCM,data:pRg0zri1OZ+VZV1humTa6UHHsoYXk7ZzM82lIDvq7JfQcyEg+eHnIlFwSTTDtlVWcOv/ZZDaxYLoHyYG,iv:rIPiy1ZsAs55lBYfkIoMGTjTztPKHKq0Euw7b05l68w=,tag:ucwDP4s0/pnxSIQ5jvPUZw==,type:str]
     RADARR_API_KEY: ENC[AES256_GCM,data:mgjufe7mZZ75OkSYNMoZcGvvkEw=,iv:5JGR5JXBRcOProVxNKoWPzynoL7OD3US0a7vy27GDCk=,tag:2FQImm2jpHbAl4s2IajtOQ==,type:str]
     SONARR_API_KEY: ENC[AES256_GCM,data:K6HrcpKfdOHLThv847IoUjNoG6A=,iv:5giRbwe+Q2z+Z5ec+O8sdEZS3iqVWhVPjNQOhuMx9Eo=,tag:WydUkmN4/hQYFgdN9/T7gA==,type:str]
     PROWLARR_API_KEY: ENC[AES256_GCM,data:MnZhTBuY4vkVT6TkcUnrc3ao2yE=,iv:E/6U5lDcyi/mkIKQ991+zVKFiSpTFBfy8re0l4/XD8Y=,tag:eQfApf21m6M9msSSqZVrnQ==,type:str]
@@ -30,8 +30,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-07T20:14:34Z"
-    mac: ENC[AES256_GCM,data:g+JdUcUYeXLM5bWSHgHNaCU9KVX0lE7zBVIhNinRFOhTvxhnQwLdf3mZMArHwglEmDEv0BrU3+VSDJdNG/KgBEdk0nmo7u2M2vTOgxFDnGWqdZsqjx3fhVBdTxb8aC+za7jMR22vVneJLQdB5f4ffubvUfdwBViUnUL9TIHUgwg=,iv:m+JMkNVzI42/vu4cOewPZeVEbtN3bFMMceCnVE1SQVE=,tag:lA0ZtZqqTS8xYpI0xHYDWQ==,type:str]
+    lastmodified: "2024-02-07T21:23:20Z"
+    mac: ENC[AES256_GCM,data:cOGt+hV809+wyisN3AaNl0FRiHKlxG8IpjH0Ib89ip0w6edqkLM2uBmBp2UUcvZXrS+SSxGM27FetFMnk2LbrWObCg5yzyKYY6rLKP9X23JcBPYCEIw9AlkyGutSSudFIMgHsRUX16o3opA3FcbDdrJ4BHrXBcUoJnJhVUfvAJY=,iv:jXd/ovNl9Jtn3ZZgpDdjPr3wxFp7w6iH3BGRnTHZJ9U=,tag:w7aM4Wk+N9BjfmDpAegfZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
