--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -2,12 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./bjw-s.yaml
-  - ./cilium.yaml
-  - ./external-dns.yaml
-  - ./ingress-nginx.yaml
-  - ./k8s-gateway.yaml
-  - ./jetstack.yaml
-  - ./metrics-server.yaml
-  - ./weaveworks.yaml
-  - ./stakater.yaml
+  - ./repos/bjw-s.yaml
+  - ./repos/cilium.yaml
+  - ./repos/external-dns.yaml
+  - ./repos/ingress-nginx.yaml
+  - ./repos/k8s-gateway.yaml
+  - ./repos/jetstack.yaml
+  - ./repos/metrics-server.yaml
+  - ./repos/weaveworks.yaml
+  - ./repos/stakater.yaml
+  - ./repos/longhorn.yaml
