--- a/kubernetes/apps/storage/longhorn/app/kustomization.yaml
+++ b/kubernetes/apps/storage/longhorn/app/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
- - helm-release.yaml
+ - helmrelease.yaml
  - minio-secret.sops.yaml
  - longhorn-sc-fast.yaml
  - longhorn-sc-ssd.yaml
