--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -47,11 +47,10 @@ spec:
     pspEnable: false
     ingress:
       enabled: true
-      ingressClassName: "internal"
-      annotations:
-        nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,158.101.199.148/32,2603:c022:c002:4800::10/128,2001:14ba:16fd:9600::/56,185.218.193.134/32,2001:67c:1104::/48,2001:67c:1be8::/48"
+      ingressClassName: internal
       tls: true
-      host: "longhorn.skynerv.com"
+      host: "longhorn.${SECRET_DOMAIN}"
+      path: /
     longhornManager:
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
