--- a/kubernetes/apps/storage/longhorn/app/kustomization.yaml
+++ b/kubernetes/apps/storage/longhorn/app/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
  - helmrelease.yaml
- - minio-secret.sops.yaml
+ - s3-secret.sops.yaml
  - longhorn-sc-fast.yaml
  - longhorn-sc-ssd.yaml
  - longhorn-sc-storage.yaml
