--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -14,6 +14,8 @@ stringData:
     SONARR_PG_PASSWORD: ENC[AES256_GCM,data:iOBmvCjsj7DFHA==,iv:1biCjPeXN5RwxGrKKd66i/xqwtASBErsJLM/1IqALIs=,tag:N+G1drFGaX2pXDCUaRZIkg==,type:str]
     PROWLARR_PG_PASSWORD: ENC[AES256_GCM,data:lDsmNeJGzceLDw==,iv:8erR+f2nulFNvl46xtZe6mL2Lk/OvfOkjPjq6RDXuxY=,tag:XbD6ow0BrJSrASzp2gAObw==,type:str]
     RADARR_PG_PASSWORD: ENC[AES256_GCM,data:BRMPnuoPvgSijA==,iv:3NIv9c+Wg1VZgRTnarYiUfjja6YSG/wnczcVHF2UypI=,tag:VpG6yc2ju0d57UbN7BEvQw==,type:str]
+    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:9/lbh6Rnemw=,iv:4B+OeffhGZ2KIomOo/zFjfSLG67DACLs6hEkUBwDNOU=,tag:JSn572Q1bNNZ/EOu4RLBBA==,type:str]
+    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:J6FeJRD84iIRVtp0/91ktcrVAQ==,iv:8rL2/cs6k8uV8r3vsGR5HQpPOIAkpM4bIOq2hMwH5RQ=,tag:Elaz0v9yTAZ/8K9PAuuHOg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +31,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-08T18:50:37Z"
-    mac: ENC[AES256_GCM,data:k9tAlsm1ZzSgaIXi9qjxpzY2x+1nJQm21DYhPEkzqXibYgBkDXdoSP9ZAC7HywWALa0ZaUCWmKUpShMycUe9L0iG6Uvq4n2Ky3WwImt2a7ZJzp/rKGsq9XL2InmA9va4U/pkk6O+dG9o74Lrk/7+2wdWZLhwn4u7pBohp6nU7Zo=,iv:640+IIioz1lWiBDstrI+ow2MYJG5HQs1G4rVNfyLu90=,tag:P+Ne9qfgk/Q2kW7zyZAXHQ==,type:str]
+    lastmodified: "2024-02-08T20:36:43Z"
+    mac: ENC[AES256_GCM,data:8yLzDNmmlFoCXhclvqYHBb+ualh7ru51h7IL1QHxrORLu5misDLWvvlk0TttH0XMxuW3d758NwUGqM8dr1HIT9wRLy0uxTs7fHPeOXuqmiLJqy2OogimG1nHsc/gsLHhGixCmwxVaQhgnM9TOh849y4QnbXgHANx7CbuMQlGidw=,iv:aSe/hFGLl2i+ESOJyXn4cpvEiPCwuhMYA3I/wNo/IEA=,tag:QCJyLnVyxHX7lE7+BEZMOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
