--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -108,6 +108,7 @@ spec:
               - *host
               - *s3Host
     persistence:
+      config:
         existingClaim: minio
         globalMounts:
           - path: /data
