--- a/kubernetes/apps/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/ks.yaml
@@ -11,7 +11,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: longhorn
+    - name: minio
   path: ./kubernetes/main/apps/database/cloudnative-pg/app
   prune: true
   sourceRef:
