--- a/kubernetes/apps/storage/minio/app/pvc.yaml
+++ b/kubernetes/apps/storage/minio/app/pvc.yaml
@@ -7,5 +7,5 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 200Gi
-  storageClassName: longhorn-storage
+      storage: 1Gi
+  storageClassName: longhorn-fast
