--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -15,9 +15,11 @@ spec:
         name: bjw-s
         namespace: flux-system
   install:
+    timeout: 25m
     remediation:
       retries: 3
   upgrade:
+    timeout: 25m
     cleanupOnFail: true
     remediation:
       retries: 3
