Fix minio chart

--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -72,6 +72,7 @@ spec:
         enabled: true
         ports:
           http:
+            enabled: true
             port: 9001
           api:
             enabled: true
