--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -16,6 +16,8 @@ stringData:
     RADARR_PG_PASSWORD: ENC[AES256_GCM,data:BRMPnuoPvgSijA==,iv:3NIv9c+Wg1VZgRTnarYiUfjja6YSG/wnczcVHF2UypI=,tag:VpG6yc2ju0d57UbN7BEvQw==,type:str]
     POSTGRES_SUPER_USER: ENC[AES256_GCM,data:9/lbh6Rnemw=,iv:4B+OeffhGZ2KIomOo/zFjfSLG67DACLs6hEkUBwDNOU=,tag:JSn572Q1bNNZ/EOu4RLBBA==,type:str]
     POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:J6FeJRD84iIRVtp0/91ktcrVAQ==,iv:8rL2/cs6k8uV8r3vsGR5HQpPOIAkpM4bIOq2hMwH5RQ=,tag:Elaz0v9yTAZ/8K9PAuuHOg==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:yw6AjW0EXtjd,iv:31lrASRIL7FPYfI6aEX/78UdptK4jxrDBM1NxCgzKck=,tag:2ase/ip6sTOo4qT9ZnRCyw==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:7Q/BxHHBRliqSg==,iv:AlMR/cmRHlxsAWwPTbfDj0rB6TO8lXlhCAKMvhHf3CM=,tag:xRXY2L1eIluZV/Q2BypgmA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -31,8 +33,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-08T20:36:43Z"
-    mac: ENC[AES256_GCM,data:8yLzDNmmlFoCXhclvqYHBb+ualh7ru51h7IL1QHxrORLu5misDLWvvlk0TttH0XMxuW3d758NwUGqM8dr1HIT9wRLy0uxTs7fHPeOXuqmiLJqy2OogimG1nHsc/gsLHhGixCmwxVaQhgnM9TOh849y4QnbXgHANx7CbuMQlGidw=,iv:aSe/hFGLl2i+ESOJyXn4cpvEiPCwuhMYA3I/wNo/IEA=,tag:QCJyLnVyxHX7lE7+BEZMOQ==,type:str]
+    lastmodified: "2024-02-09T00:39:02Z"
+    mac: ENC[AES256_GCM,data:3r6bQWjSms17tcsS9QB3ctAYNXNt7A+j5UteXF9a1sx3PzfWGPcxYAlJLsUode+V+2+IWwMDV+nJJQU3ceHXEAvE97wqWFS1F6dxB8KfVdo2jmvAyGQQHehJMjx1Ymva2Co4On6O3RR35f8cuw4kxx+p9YwLvozEZCyaUuq7aQU=,iv:3PG4v3lkumw65yjsl+6qBsuHo3IuV3W1/Mi8FOfKcYI=,tag:fgjnzhsykn33obewaS71jQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
