Update minio secret type

--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
     name: minio-secret
     namespace: storage
+type: bootstrap.kubernetes.io/token
 stringData:
     MINIO_ROOT_USER: ENC[AES256_GCM,data:mPMAtfmtVG/CkHfDGklf44sP,iv:UGZ2wFmBzZArY8hxGB8W2MD/iUUUctwd2p9utwnPHf8=,tag:EusF31yv40yUTnpmD0N7RA==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:FVAjmPNpUdiiUsQlg28FbV9coq7/Ew==,iv:lmhLopVVZXe88WWbNAbeIiTH00ODqc8d+4M6Xj8gH4M=,tag:GdtGd0TXryM+8QPf8JLyIw==,type:str]
@@ -21,8 +22,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-08T21:06:05Z"
-    mac: ENC[AES256_GCM,data:Q8/6GuuZuTwMuMclz6a7ubhP39kPx62vOo7UZ0MI9eH+ZiBNCzFsnVxhc4y8gZ2JX4lAyCsNu/wn8hs5a3f0bfuOhFQ/IvKw1zZOPB8id/wcc20k3mGWzXhjymSx5E8gFjodWPlMuMpGMzQxzMW/5YRUbpncVJZxR4w+0GZ7Um8=,iv:xcQYU2wWkK7vxyembOXFPT0ibLwcK5FMbEUYXQw3qTk=,tag:76HVn1U9TGdSBddOB33bYg==,type:str]
+    lastmodified: "2024-02-09T09:28:33Z"
+    mac: ENC[AES256_GCM,data:th6JDBAvx46yJtW3JMcTip6dH6rLSoyaVAEWNh8KX4rMORcnJt9PV5xkEpQP4yr3+Kuk0oWgeZW7GHGEwijFWtjT7lo3vfPscQ6nBXbg5HbiDUQVTmEax9MELZmyfWfjaOJCJEsyLS0RSjsC1HpozoB0RPAtHmbbNtjr5uk94bM=,iv:UxWqFfPnixI85cXNJGEbBmc4N9FERmL5u9B27urytyo=,tag:LBRMI3vrqMz7TLIAPdhJwQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
