Fix minio secret

--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: storage
 type: bootstrap.kubernetes.io/token
 stringData:
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:mPMAtfmtVG/CkHfDGklf44sP,iv:UGZ2wFmBzZArY8hxGB8W2MD/iUUUctwd2p9utwnPHf8=,tag:EusF31yv40yUTnpmD0N7RA==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:FVAjmPNpUdiiUsQlg28FbV9coq7/Ew==,iv:lmhLopVVZXe88WWbNAbeIiTH00ODqc8d+4M6Xj8gH4M=,tag:GdtGd0TXryM+8QPf8JLyIw==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:KsPQxwiN6mAK,iv:81VAnjAlzVTeulAjZSvVYyUAY9cbu+MWt9nMaLXyMlw=,tag:MDeUEpsrXyHeYxNE2/yL/Q==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:5fie08ErH67ATA==,iv:o1BN6NCGRwYFgewCBrw/Ykm1bULOhtR1iDwyE0AX+1U=,tag:91eING76oy8hYWLX65b99Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T09:28:33Z"
-    mac: ENC[AES256_GCM,data:th6JDBAvx46yJtW3JMcTip6dH6rLSoyaVAEWNh8KX4rMORcnJt9PV5xkEpQP4yr3+Kuk0oWgeZW7GHGEwijFWtjT7lo3vfPscQ6nBXbg5HbiDUQVTmEax9MELZmyfWfjaOJCJEsyLS0RSjsC1HpozoB0RPAtHmbbNtjr5uk94bM=,iv:UxWqFfPnixI85cXNJGEbBmc4N9FERmL5u9B27urytyo=,tag:LBRMI3vrqMz7TLIAPdhJwQ==,type:str]
+    lastmodified: "2024-02-09T09:39:51Z"
+    mac: ENC[AES256_GCM,data:+unRvsCtOLJ6RSH3Ii2hf5LQnBVAvJ8JvEheLGUm7CAMxfUElo9gsFKEl1GjhhODD31AdcsK4mXLU9+hFoorbUmTL4GIsXg/Z7XAxK+62J3ybRbL93nPSilPGFxJLzL9FFFscEdfjcUfIPLroIDUH6FQTI7TfYasLWB0JB+HSCg=,iv:MmaAZiTXeFGzMgws7ySzUx8Nr/dndcaF1YqmW4fpUEY=,tag:b/+YLiCBRjOXChtdMzGe+Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
