--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: minio-secret
     namespace: storage
 type: bootstrap.kubernetes.io/token
-stringData:
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:KsPQxwiN6mAK,iv:81VAnjAlzVTeulAjZSvVYyUAY9cbu+MWt9nMaLXyMlw=,tag:MDeUEpsrXyHeYxNE2/yL/Q==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:5fie08ErH67ATA==,iv:o1BN6NCGRwYFgewCBrw/Ykm1bULOhtR1iDwyE0AX+1U=,tag:91eING76oy8hYWLX65b99Q==,type:str]
+data:
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:V+/0vpXGU34r,iv:euEr9Ifz6BlSaBme5DdDqTTe72IoU+BxTn+3xo385RU=,tag:v+hTXDRhcOB9cK0UgA07Mw==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:GENve2pgeRwfeg==,iv:Hw5ykCCH3KrEv3aF83MEKl2vo8MqUs6F7Ua2puUdChk=,tag:a4x1PjpPDJ1FZjeRH+Z29w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T09:39:51Z"
-    mac: ENC[AES256_GCM,data:+unRvsCtOLJ6RSH3Ii2hf5LQnBVAvJ8JvEheLGUm7CAMxfUElo9gsFKEl1GjhhODD31AdcsK4mXLU9+hFoorbUmTL4GIsXg/Z7XAxK+62J3ybRbL93nPSilPGFxJLzL9FFFscEdfjcUfIPLroIDUH6FQTI7TfYasLWB0JB+HSCg=,iv:MmaAZiTXeFGzMgws7ySzUx8Nr/dndcaF1YqmW4fpUEY=,tag:b/+YLiCBRjOXChtdMzGe+Q==,type:str]
+    lastmodified: "2024-02-09T09:46:12Z"
+    mac: ENC[AES256_GCM,data:Dy8U5ViarsvKEXI78RQpZKpEDwDo+XsBV9E4ygb/7831ththwc7pCXxNs+kghVt0trm45z7zIs9P8UsZOs8D8GYW+V0tqLz90WY/EcfCw+4AMoImZyYIfu+OV7RevtF3U0RnbCz3/nnPMrPplLa4iDShX2O/rX3sntqMf08TJio=,iv:l+ehyy+9wDC6E9IC1KUqoeOTlauKRN5Vl8EFb8X+WbM=,tag:aMwYmLCm1uiCSMewIEam4w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
