--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: minio-secret
     namespace: storage
 type: bootstrap.kubernetes.io/token
-data:
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:V+/0vpXGU34r,iv:euEr9Ifz6BlSaBme5DdDqTTe72IoU+BxTn+3xo385RU=,tag:v+hTXDRhcOB9cK0UgA07Mw==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:GENve2pgeRwfeg==,iv:Hw5ykCCH3KrEv3aF83MEKl2vo8MqUs6F7Ua2puUdChk=,tag:a4x1PjpPDJ1FZjeRH+Z29w==,type:str]
+stringData:
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:2PSHqaKxfq4Q,iv:NGhY+JN0489WrVRjZMRwp9jq5LWcQFhloE6Uc+eT2Bw=,tag:4gWuRATW/AmiGWvgFLDS1A==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:pXGQgr1Bykee4A==,iv:1xhODezH/x0zalTtkFaoGxE+vtxRf4GH3reHsGa1EX0=,tag:AXcSZ34BxH3bf/U/OM6GDQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T09:46:12Z"
-    mac: ENC[AES256_GCM,data:Dy8U5ViarsvKEXI78RQpZKpEDwDo+XsBV9E4ygb/7831ththwc7pCXxNs+kghVt0trm45z7zIs9P8UsZOs8D8GYW+V0tqLz90WY/EcfCw+4AMoImZyYIfu+OV7RevtF3U0RnbCz3/nnPMrPplLa4iDShX2O/rX3sntqMf08TJio=,iv:l+ehyy+9wDC6E9IC1KUqoeOTlauKRN5Vl8EFb8X+WbM=,tag:aMwYmLCm1uiCSMewIEam4w==,type:str]
+    lastmodified: "2024-02-09T09:48:03Z"
+    mac: ENC[AES256_GCM,data:gI3kk+yP3AucqI0pZaP2PUDFWhTS3D8qmtMHQrRHOE1sVrHK2fcFSbU5z+tURajMIEhMRmxs1aZ5V0c+AzXR374f0jaxOv+hm8+kqVMja4s5lJndOEnj9NB4NhW0hDjyIEfHzUGlPywwD4uxuI36ep6EQZFryeviLH6tgbLUl98=,iv:5F+Me1VXNCS+5Nu+O/95OSYb3nNIS/g0UCS/q+QX8AQ=,tag:SQwVBMceX4hyVrQ6gCevHg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
