--- a/kubernetes/apps/database/cloudnative-pg/app/cloudnative-pg-secret.sops.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/cloudnative-pg-secret.sops.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
     name: cloudnative-pg-secret
     namespace: database
+type: kubernetes.io/basic-auth
 stringData:
     username: ENC[AES256_GCM,data:Tp1KPIg5P1fwQLqlXgkl+4pCcw5eFA==,iv:Z8JV/op7vOXKX40cFZJenUyMzEm/nR9nyeKR2CTjz/o=,tag:Q0ccdHop0NtDMCdvjmOmOw==,type:str]
     password: ENC[AES256_GCM,data:7UDQsqk12qaVJOLxBOJvaavxvB33Pw==,iv:BWUvQy1/XuPOmsCvf5y+GJ2RED+StrGH8xFSZiXKk4g=,tag:tbXmZ7Y9CYaNHLoCewS+9A==,type:str]
@@ -23,8 +24,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-08T20:47:37Z"
-    mac: ENC[AES256_GCM,data:WYpzyZpguY/UiMt4l1G+FkeKddoAJX2V6MkJpyhKU7pKuEL6SPaRQGoVzzRO+CAHfl5H/ezVr2XVaEWGNsl4j/J68OxtrRbJtsO8SNrEklMX4SowUQ9xivBwELwdAt6lLAZlQ550XT4OQT0ovqzNgVdHBVNAVwJpzmJW9CUk4r8=,iv:ATd2W0oxpR8ZPjhKcbD2J/AUTe4SpJ40lqzLn5CPhLw=,tag:C+QyS/8Vmf0UrzosBNtwHA==,type:str]
+    lastmodified: "2024-02-09T09:50:52Z"
+    mac: ENC[AES256_GCM,data:4+4PG95YB3E1RNHqmHkWfMJCq3XdbtcSx+tXUDOn9eemlXB6hn0nuGSt8UMOIIZexC0ofoHFzuaMqIsweB/JgldGstHohLDON5BSu76CWa7mmzqPGyW7k/Yyay3czaap7jglQC1u9eMytUihu6teZxZLG3zw73RzH175C9GMKwo=,iv:5gbLkekQL/Yaaph4uV41PaziDQ8YpKZ0BN0RAEBTCkg=,tag:k3tpeA+gHVbP+VJHSEZhDQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
