--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
     name: minio-secret
     namespace: storage
-type: bootstrap.kubernetes.io/token
+type: kubernetes.io/basic-auth
 stringData:
     MINIO_ROOT_USER: ENC[AES256_GCM,data:2PSHqaKxfq4Q,iv:NGhY+JN0489WrVRjZMRwp9jq5LWcQFhloE6Uc+eT2Bw=,tag:4gWuRATW/AmiGWvgFLDS1A==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:pXGQgr1Bykee4A==,iv:1xhODezH/x0zalTtkFaoGxE+vtxRf4GH3reHsGa1EX0=,tag:AXcSZ34BxH3bf/U/OM6GDQ==,type:str]
@@ -22,8 +22,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T09:48:03Z"
-    mac: ENC[AES256_GCM,data:gI3kk+yP3AucqI0pZaP2PUDFWhTS3D8qmtMHQrRHOE1sVrHK2fcFSbU5z+tURajMIEhMRmxs1aZ5V0c+AzXR374f0jaxOv+hm8+kqVMja4s5lJndOEnj9NB4NhW0hDjyIEfHzUGlPywwD4uxuI36ep6EQZFryeviLH6tgbLUl98=,iv:5F+Me1VXNCS+5Nu+O/95OSYb3nNIS/g0UCS/q+QX8AQ=,tag:SQwVBMceX4hyVrQ6gCevHg==,type:str]
+    lastmodified: "2024-02-09T09:50:28Z"
+    mac: ENC[AES256_GCM,data:FhtLRXLNBsvPUCK0jxowYjcAVp9Ft1bS60UMkurpWiIptqIXgLyL8MtsMXqWwi86Hpnxk39Z6xw0yrRpxJWnK+E3ZLs5MenQHN9ThH5goPQP6JYDTBYhQA7S5gJb4lDpkcbsALpEx3+r/Xh/WhKRkSHgfipXkccVsX6vIkh+X3k=,iv:qUImcdHLSaMX6tJFp+2/BvXbhqV5BIDG/tq8HiXY2zc=,tag:eeee7FBDLMS7mUkJHcSiwQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
