--- a/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
+++ b/kubernetes/apps/storage/minio/app/minio-secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: minio-secret
     namespace: storage
 stringData:
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:2PSHqaKxfq4Q,iv:NGhY+JN0489WrVRjZMRwp9jq5LWcQFhloE6Uc+eT2Bw=,tag:4gWuRATW/AmiGWvgFLDS1A==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:pXGQgr1Bykee4A==,iv:1xhODezH/x0zalTtkFaoGxE+vtxRf4GH3reHsGa1EX0=,tag:AXcSZ34BxH3bf/U/OM6GDQ==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:65kYhhXsgVQGkq6aZtqUap+2,iv:s60Ysuu/xGJChUVT5RXveiF/1eTQupw0cfFxy1qooaM=,tag:SUWEHQPgNvmZqfn0QqZ1gw==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:uzvoyGuus1Cjk8qTMdEY7zWscZlTFA==,iv:OUfC1pinHh4p3kfXeyjzMZaACPvxpOsrHS/SnoHwcw4=,tag:Hjw0yjdWMA3tn5CCbkdrRg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             dE5mK2dBUXNEb3ExUlhVRkJta1F1TEEK9vxUNpUPSuuhSZPKT9elivyAqLKS8KqA
             +oDrwYwTKZGxJd3OLKGzftWdz68Lf+bJMBEFoVFwxkhoHl4oW/sw4g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T09:56:10Z"
-    mac: ENC[AES256_GCM,data:AB557vU5YefMD0CrLCjIZAmw/zaBJs1kkoGR257YuwzEkCAEXMI3zwUvgQ/7FuXKhqjPHYS2l+l9w8OwZbvbtKvTwwBKRGEveYSKt3MImyI/2rEFKryDw/O5shU1YYvbc3XksY1SxXYKCf4j3XUe4MAlPmsh/HMs8TAft3gRnbs=,iv:NtYHxlw6bpDI35saO/BMKoe+pTuvF/3mD0KGRASjiWo=,tag:AfQQINvaTN1sfnf/lBZYew==,type:str]
+    lastmodified: "2024-02-09T10:00:54Z"
+    mac: ENC[AES256_GCM,data:58YwVphn17hbmpZqOnGpFVKC68jhDWV4Fn0+ewAIVp5AEJ1ZQwElXMAlR2/uAEY3cfjL5LDpJ1SqVsNLj4MAcsfav0V1DXHsMqogxtWp/gy8eIEW2z/LqzJbVnwqtr0YGu9yE+wN1yy/dBps/dUekihm2vdT2stNBpw6djXfvkU=,iv:vzyc8flxP5Y6UfNKwRqTaxAB/l7NBXSL6dqn4Tw81v4=,tag:9JU2Y5w2IsE5d09IfKiraA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
