--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -15,3 +15,4 @@ resources:
   - ./repos/cloudnative-pg.yaml
   - ./repos/grafana.yaml
   - ./repos/prometheus-community.yaml
+  - ./repos/minio-operator-charts.yaml
