--- a/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
       env:
         - name: MINIO_PROMETHEUS_URL
           value: "http://kube-prometheus-stack-prometheus.monitoring:9090"
+        - name: MINIO_SERVER_URL
+          value: "https://s3.${SECRET_DOMAIN}"
       buckets:
         - name: loki-chunks
         - name: loki-ruler
