--- a/kubernetes/apps/storage/minio/tenant/ingress.yaml
+++ b/kubernetes/apps/storage/minio/tenant/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
 spec:
-  ingressClassName: nginx
+  ingressClassName: internal
   rules:
   - host: "minio.${SECRET_DOMAIN}"
     http:
@@ -43,7 +43,7 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
 spec:
-  ingressClassName: nginx
+  ingressClassName: internal
   rules:
   - host: "s3.${SECRET_DOMAIN}"
     http:
@@ -74,7 +74,7 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       chunked_transfer_encoding off;
 spec:
-  ingressClassName: nginx
+  ingressClassName: internal
   rules:
   - host: "*.s3.${SECRET_DOMAIN}"
     http:
