--- a/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         - name: MINIO_PROMETHEUS_URL
           value: "http://kube-prometheus-stack-prometheus.monitoring:9090"
         - name: MINIO_SERVER_URL
-          value: "https://s3.${SECRET_DOMAIN}"
+          value: minio.storage.svc
       buckets:
         - name: loki-chunks
         - name: loki-ruler
