--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -18,6 +18,10 @@ stringData:
     POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:J6FeJRD84iIRVtp0/91ktcrVAQ==,iv:8rL2/cs6k8uV8r3vsGR5HQpPOIAkpM4bIOq2hMwH5RQ=,tag:Elaz0v9yTAZ/8K9PAuuHOg==,type:str]
     MINIO_ROOT_USER: ENC[AES256_GCM,data:yw6AjW0EXtjd,iv:31lrASRIL7FPYfI6aEX/78UdptK4jxrDBM1NxCgzKck=,tag:2ase/ip6sTOo4qT9ZnRCyw==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:7Q/BxHHBRliqSg==,iv:AlMR/cmRHlxsAWwPTbfDj0rB6TO8lXlhCAKMvhHf3CM=,tag:xRXY2L1eIluZV/Q2BypgmA==,type:str]
+    PUSHOVER_USER_KEY: ENC[AES256_GCM,data:/GKNQ296d8YqjU7VVAY1RrRVcq5ZBsT+JkIt/mX3,iv:jpl/0670Ib+9XJx0fjOIqZFL91CKXeg8/JTajEZNht0=,tag:h5sms0Jw2WBA2BRhd4z50Q==,type:str]
+    GATUS_PUSHOVER_TOKEN: ENC[AES256_GCM,data:fS6KBB3j5IZcbj+nnZneXXGMWfRRbtagzjWO6IYV,iv:T1XLyYdU32tM8G+OUGgJB3kL2REWcjvAMjgvk/2suq4=,tag:2GVVKpo4u1j9sSO2GRCy1Q==,type:str]
+    GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:YiK90oIcPbxQKiWtZLgO7jaFsmdPiQ==,iv:hD9SOosd23p0E3uA0TDb5V6/2y/xprMO31Q5tbNfZfw=,tag:nAGTG5ERBhNm6OW42mV/Gg==,type:str]
+    ALERTMANAGER_PUSHOVER_TOKEN: ENC[AES256_GCM,data:QFytjqDSOXWL3/ZbTeeosNKr3nSIsl3l/nOJa+/B,iv:IPBs5Glre1CzfE+tTkT252qKeD+Htfaq9Uc8gU5ji1s=,tag:tRNQLawj6j5LNaep9TteaA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -33,8 +37,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T00:39:02Z"
-    mac: ENC[AES256_GCM,data:3r6bQWjSms17tcsS9QB3ctAYNXNt7A+j5UteXF9a1sx3PzfWGPcxYAlJLsUode+V+2+IWwMDV+nJJQU3ceHXEAvE97wqWFS1F6dxB8KfVdo2jmvAyGQQHehJMjx1Ymva2Co4On6O3RR35f8cuw4kxx+p9YwLvozEZCyaUuq7aQU=,iv:3PG4v3lkumw65yjsl+6qBsuHo3IuV3W1/Mi8FOfKcYI=,tag:fgjnzhsykn33obewaS71jQ==,type:str]
+    lastmodified: "2024-02-09T19:29:27Z"
+    mac: ENC[AES256_GCM,data:gPZpkyfefrZLzXjb8/rlsgezEqDp1cidkQUKB0mkhPHv3kzWadQN1Z1xlrpMLccIIwQ9RDn2zgrR3KmTh4wh94K5N5lsoxhsDgWqSZzz4BJ0o0X9kum8B0pqUkyiL1ojcGLJdzaU5o4sQXxwcdIY+EUz65I4SrktyQrYrUWc2PE=,iv:iQJwVIPpQxPvW7PNSxjumHtTk24w2DpZfOmq9aVRIPI=,tag:Qg4Inn/WVd8XjGZNrnURYw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
