--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -29,11 +29,11 @@ spec:
       namespace: storage
   valuesFrom:
     - targetPath: loki.structuredConfig.common.storage.s3.bucketnames
-      kind: ConfigMap
+      kind: Secret
       name: loki-bucket
       valuesKey: BUCKET_NAME
     - targetPath: loki.structuredConfig.common.storage.s3.endpoint
-      kind: ConfigMap
+      kind: Secret
       name: loki-bucket
       valuesKey: BUCKET_HOST
     - targetPath: loki.structuredConfig.common.storage.s3.access_key_id
