--- a/kubernetes/apps/observability/thanos/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/thanos/app/helmrelease.yaml
@@ -31,15 +31,15 @@ spec:
       namespace: database
   valuesFrom:
     - targetPath: objstoreConfig.config.bucket
-      kind: ConfigMap
-      name: thanos-bucke
+      kind: Secret
+      name: thanos-bucket
       valuesKey: BUCKET_NAME
     - targetPath: objstoreConfig.config.endpoint
-      kind: ConfigMap
+      kind: Secret
       name: thanos-bucket
       valuesKey: BUCKET_HOST
     - targetPath: objstoreConfig.config.region
-      kind: ConfigMap
+      kind: Secret
       name: thanos-bucket
       valuesKey: BUCKET_REGION
     - targetPath: objstoreConfig.config.access_key
