--- a/kubernetes/apps/observability/loki/app/secrets.sops.yaml
+++ b/kubernetes/apps/observability/loki/app/secrets.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: loki-bucket
 stringData:
     BUCKET_NAME: ENC[AES256_GCM,data:j2egLQ==,iv:lqQf0tRPXjJNQn2x4Hp5KDiWYfO9em1uwQcxT2pI/00=,tag:vGEu2Ft2dt5V3fQVpCo9aA==,type:str]
-    BUCKET_HOST: ENC[AES256_GCM,data:Mczgz8GYVH6fO+r6iU4=,iv:g+YvqFALAM3bCtHgOd4cFD2zYs/EFPZaVC3wFJ2UsDA=,tag:0fQAoXvf5q9Nms/gxienZw==,type:str]
+    BUCKET_HOST: ENC[AES256_GCM,data:7tiVVmbN9zfyodUpYAHtCoE=,iv:o7mteVrlE/3gti75sOZHHEJYlx+s7rT4/pBepL5R6GM=,tag:4UgZnhlcDMYCOPy/1h4qyg==,type:str]
     AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:NsAdlrAAN+jUvfm7Uwy1ug2Hmhc=,iv:3zFk0G77sOPVIO+nOTeXtK4IUGT0G0QTVpiBS24krmA=,tag:99dKcER7/InoNSoGR+q1mQ==,type:str]
     AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:TyReajZeY9Nh9by6jvziQ4Ex1Ze1qXdk,iv:kjNqS+bJTY1xid1mxewMWIS2QhJ7vDXZFFZvfCMJhDE=,tag:DW0f/4RgDexEqgChgPOUPQ==,type:str]
 sops:
@@ -22,8 +22,8 @@ sops:
             U1N4Z2g0cjlEd1laMUVZZlRuSHAvRTQK+lZmHrLlqzbYkbtLrO5IGjR7FQOCxAHD
             NXoMzY+8hMMx17nTnVgEgDP1qA0oR+qdwLJmTn+UBJS+3vTMZPg2vA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T19:38:54Z"
-    mac: ENC[AES256_GCM,data:fhkvXgNP0Oyy//C2uWhP9n8P18FiiFZrzuaBdbge+clu12Z2e4o05xhivmL27M53OQ6Cpr4G+xyvFQutWK/bOs9z4tPkhjEOeaZ2ycVKl4KM/5AEuJivatOcDmiWZYircnZkYHDngCU4eL2V3c8M/1zMtgncOGomDoHuwvnWrMg=,iv:UTcicifMbmzkQn2QYJtMObInUm6chRoF9OlXk2RVdtg=,tag:gDGEDgFb4wymCgR2FWqbrw==,type:str]
+    lastmodified: "2024-02-09T20:49:14Z"
+    mac: ENC[AES256_GCM,data:QcCJWqYz988C34JZEUtfcqCW8I+y3wroxRXq2XmgO4TSZqm7keevx7s1xNwoPUTVtUMLahbEtTOxqxxJqALBu3RiezACdcmOTQwoDg45tbu8/ziCUnilcAb4DwXFMRVjeKV6IYl2XUQ3MLeXHu6rLgVphwR+YXxH8dS7EtWKAio=,iv:PwWm2wXBajuv5Xh8yqr5cQ2aX3ccVgOeFLy5/IhvSh4=,tag:Bog/TTp1xMXpn9KnXAk4kg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
