--- a/kubernetes/apps/observability/thanos/app/secrets.sops.yaml
+++ b/kubernetes/apps/observability/thanos/app/secrets.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: thanos-bucket
 stringData:
     BUCKET_NAME: ENC[AES256_GCM,data:txdt+35T,iv:aLHrFBxz+3+u6e7THTQ5i/VlHqDsmUicppXSGAdeCuw=,tag:5sR1+BPgt98GGAEFwO75NQ==,type:str]
-    BUCKET_HOST: ENC[AES256_GCM,data:Mczgz8GYVH6fO+r6iU4=,iv:g+YvqFALAM3bCtHgOd4cFD2zYs/EFPZaVC3wFJ2UsDA=,tag:0fQAoXvf5q9Nms/gxienZw==,type:str]
+    BUCKET_HOST: ENC[AES256_GCM,data:XGgpsdKy3J4TSlCQkRnuw04=,iv:bKFd0m/NXuKVdtuPt1sUZm/hna1xsxQsHKDEppnUNN8=,tag:xTQU71LptT2pSwM2Gk3miQ==,type:str]
     BUCKET_REGION: ENC[AES256_GCM,data:PdI3CNL1p01G,iv:wGpicBSWOwk5xgDhNQCLb0qNw5a8xmtN4YvS/w/zQeE=,tag:XuR0/Tcjo+xthZg36mc3mA==,type:str]
     AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:NsAdlrAAN+jUvfm7Uwy1ug2Hmhc=,iv:3zFk0G77sOPVIO+nOTeXtK4IUGT0G0QTVpiBS24krmA=,tag:99dKcER7/InoNSoGR+q1mQ==,type:str]
     AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:TyReajZeY9Nh9by6jvziQ4Ex1Ze1qXdk,iv:kjNqS+bJTY1xid1mxewMWIS2QhJ7vDXZFFZvfCMJhDE=,tag:DW0f/4RgDexEqgChgPOUPQ==,type:str]
@@ -23,8 +23,8 @@ sops:
             U1N4Z2g0cjlEd1laMUVZZlRuSHAvRTQK+lZmHrLlqzbYkbtLrO5IGjR7FQOCxAHD
             NXoMzY+8hMMx17nTnVgEgDP1qA0oR+qdwLJmTn+UBJS+3vTMZPg2vA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-09T20:10:39Z"
-    mac: ENC[AES256_GCM,data:O07Z7u0dKAGvvgE6n3ybYFHdWRvTpKQMpXx7sJ/RwZDWoBX6BHTbyjHLdLVQ2T4aKWYOMa7imQV1jwzgog8OmqU95kNb2zqxMEb4DJ/iTY3bYUHt02cJzTVxWH8wGnzotHL/siqUxYZ0me6yBbYUEzsNG7fA0eh1KKOlReBycxk=,iv:76to5v9SQ5YZYYnjKjvGdrL6q2ODoK+CKlWOHBGtB60=,tag:LulMx2tEPUjjS4Bz6LOXBA==,type:str]
+    lastmodified: "2024-02-09T20:50:01Z"
+    mac: ENC[AES256_GCM,data:lmtWL+WzZrxDKsxIuPJQr7ZFMZZAdojMxcWFaX5r/0GAAo+uNjNZYdCmkEao60Jsl1ndsbVsBkyk/jizJZMYJlkvf547lrqM/x4iacWV3BLQ3s6qKT/Y7fMDwNqET/Q86bljx2WG9hYpJQxROGyr+q+ENjFlF17UQQaHj5nVjfo=,iv:fU6GntbZSSVSwRmo5aZbab4ZDc8Qa9b8B6gxmumuqlA=,tag:6dTGlPUq4N2EJlPhn7XzgA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
